Update CIS 221 CAT 1.html

--- a/CIS 221 CAT 1.html
+++ b/CIS 221 CAT 1.html
@@ -70,7 +70,7 @@ p{
 <hr>
 <center><img src="https://th.bing.com/th/id/OIP.OqZPe2MkUXhNh-WikHyRmgAAAA?rs=1&pid=ImgDetMain"alt="aeroplane flying"/></center>
 <p>
-    mannu solutions delights in reliving you of the effort put into importsl logistics.
+    MAUREEN solutions delights in reliving you of the effort put into importsl logistics.
 </br>
     We are here to redefeine this process for you in a simpler way.
 </br>
